threw out old, try, try again....

--- a/index.html
+++ b/index.html
@@ -4,15 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script
-src="https://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-crossorigin="anonymous"></script>
+    <title>JQUERY LAB</title>
     <script defer src="js/main.js"></script>
     <link href="css/main.css" rel="stylesheet" type="text/css"/>
 </head>
-<body>
-    
-</body>
+
+
+
+<div class="header">
+    <h1>MY DEVELOPER SKILLS</h1>
+</div>
+
+
+
+<div class="main">
+
+
+
+    <div class="list">
+        <p>
+            <span>SKILLS GO IN THIS LIST<i class="glyphicon glyphicon-removed"></i></span>
+        </p>
+    </div>
+
+
+    <form class="form">
+        <div class="container"></div>
+            <input id="todo" type="text" class="addskill"><button type="submit" class="button">Add Skill</button> 
+        <div>
+    </form>
+
+
+
+</div>
+
+
+
+
+
+
+
 </html>
