90% working... Needs x buttons

--- a/index.html
+++ b/index.html
@@ -1,47 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JQUERY LAB</title>
-    <script defer src="js/main.js"></script>
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>JQUERY LAB</title>
+        <script
+ 	src="https://code.jquery.com/jquery-3.2.1.min.js"
+ 	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+ 	crossorigin="anonymous"></script>
+        <script defer src="js/main.js"></script>
+        <link href="css/main.css" rel="stylesheet" type="text/css"/>
+
+    </head>
 
 
+    <body>
+        <div class="container">
+            <h2>JQUERY LAB</h2>
+            <ol class="ol"></ol>
 
-<div class="header">
-    <h1>MY DEVELOPER SKILLS</h1>
-</div>
-
-
-
-<div class="main">
-
-
-
-    <div class="list">
-        <p>
-            <span>SKILLS GO IN THIS LIST<i class="glyphicon glyphicon-removed"></i></span>
-        </p>
-    </div>
-
-
-    <form class="form">
-        <div class="container"></div>
-            <input id="todo" type="text" class="addskill"><button type="submit" class="button">Add Skill</button> 
-        <div>
-    </form>
-
-
-
-</div>
-
-
-
-
-
-
-
+            
+            <form name="toDoList">
+                <input type="text" name='ListItem'/>
+            </form>
+            <button class="button">Add Skill</button>
+        </div>
+    </body>
 </html>
