added x button to listed items, oriented a bit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ol class="ol"></ol>
 
             
-            <form name="toDoList">
+            <form name="toDoList"></form>
                 <input type="text" name='ListItem'/>
             </form>
             <button class="button">Add Skill</button>
